# exp_GOL

./: .gitignore  CMakeLists.txt  GOL_interface.py  README.md  analyze_gradient_vanishing.py  build.sh  calculate_epoch_statistics.py  display_epoch_details.py  generate_plots.sh  reorganize_statistics.py
database-54321_16000_0.300000/: sample100.txt  sample10001.txt  sample10004.txt  sample10007.txt  sample10008.txt  sample10009.txt  sample10011.txt  sample10016.txt  sample10017.txt  sample10018.txt  sample10021.txt  sample10022.txt  sample10023.txt  sample1003.txt  sample10032.txt  sample10033.txt  sample10034.txt  sample10035.txt  sample10036.txt  sample10038.txt  sample10039.txt  sample10041.txt  sample10042.txt  sample10044.txt  sample10046.txt  sample10047.txt  sample10048.txt  sample10051.txt  sample10053.txt  sample10054.txt  sample10055.txt  sample10057.txt  sample1006.txt  sample10061.txt  sample10062.txt  sample10064.txt  sample10074.txt  sample10078.txt  sample10081.txt  sample10083.txt  (+6248 more)
database-54321_32000_0.300000/: sample1.txt  sample10.txt  sample10000.txt  sample10002.txt  sample10003.txt  sample10005.txt  sample10006.txt  sample10010.txt  sample10012.txt  sample10013.txt  sample10014.txt  sample10015.txt  sample10019.txt  sample10020.txt  sample10024.txt  sample10025.txt  sample10026.txt  sample10027.txt  sample10028.txt  sample10029.txt  sample10030.txt  sample10031.txt  sample10037.txt  sample1004.txt  sample10040.txt  sample10043.txt  sample10045.txt  sample10049.txt  sample10050.txt  sample10052.txt  sample10056.txt  sample10058.txt  sample10059.txt  sample10060.txt  sample10063.txt  sample10065.txt  sample10066.txt  sample10067.txt  sample10068.txt  sample10069.txt  (+22332 more)
database-54321_4000_0.300000/: sample1000.txt  sample1001.txt  sample1008.txt  sample1011.txt  sample1019.txt  sample1024.txt  sample1027.txt  sample1029.txt  sample1030.txt  sample1033.txt  sample1035.txt  sample1036.txt  sample1047.txt  sample105.txt  sample1054.txt  sample1060.txt  sample1065.txt  sample1066.txt  sample1071.txt  sample1072.txt  sample1073.txt  sample1079.txt  sample1086.txt  sample1088.txt  sample1099.txt  sample1109.txt  sample112.txt  sample1128.txt  sample1129.txt  sample1135.txt  sample1140.txt  sample1141.txt  sample1146.txt  sample1150.txt  sample1151.txt  sample1152.txt  sample1154.txt  sample1161.txt  sample1162.txt  sample1167.txt  (+957 more)
database-54321_8000_0.300000/: sample1002.txt  sample1005.txt  sample102.txt  sample1020.txt  sample1022.txt  sample1026.txt  sample103.txt  sample1034.txt  sample1040.txt  sample1041.txt  sample1050.txt  sample1052.txt  sample1057.txt  sample1059.txt  sample1062.txt  sample1064.txt  sample1076.txt  sample1080.txt  sample1082.txt  sample1089.txt  sample109.txt  sample1092.txt  sample1098.txt  sample110.txt  sample1100.txt  sample1107.txt  sample111.txt  sample1110.txt  sample1111.txt  sample1114.txt  sample1115.txt  sample1117.txt  sample1118.txt  sample1119.txt  sample1120.txt  sample1122.txt  sample1130.txt  sample1131.txt  sample1133.txt  sample1134.txt  (+2303 more)
database-98624_100_0.300000/: sample1.txt  sample11.txt  sample12.txt  sample14.txt  sample17.txt  sample2.txt  sample23.txt  sample25.txt  sample29.txt  sample31.txt  sample39.txt  sample41.txt  sample42.txt  sample45.txt  sample46.txt  sample47.txt  sample48.txt  sample49.txt  sample5.txt  sample51.txt  sample57.txt  sample75.txt  sample76.txt  sample78.txt  sample79.txt  sample80.txt  sample81.txt  sample89.txt  sample90.txt  sample94.txt  sample98.txt
database-98624_500_0.300000/: sample10.txt  sample100.txt  sample101.txt  sample102.txt  sample104.txt  sample106.txt  sample107.txt  sample110.txt  sample112.txt  sample115.txt  sample116.txt  sample120.txt  sample125.txt  sample126.txt  sample127.txt  sample13.txt  sample130.txt  sample131.txt  sample135.txt  sample138.txt  sample140.txt  sample141.txt  sample143.txt  sample147.txt  sample148.txt  sample149.txt  sample15.txt  sample16.txt  sample160.txt  sample162.txt  sample163.txt  sample165.txt  sample169.txt  sample170.txt  sample174.txt  sample175.txt  sample176.txt  sample177.txt  sample179.txt  sample18.txt  (+191 more)
database-98624_640_0.300000/: sample103.txt  sample105.txt  sample108.txt  sample109.txt  sample111.txt  sample113.txt  sample114.txt  sample117.txt  sample118.txt  sample119.txt  sample121.txt  sample122.txt  sample123.txt  sample124.txt  sample128.txt  sample129.txt  sample132.txt  sample133.txt  sample134.txt  sample136.txt  sample137.txt  sample139.txt  sample142.txt  sample144.txt  sample145.txt  sample146.txt  sample150.txt  sample151.txt  sample152.txt  sample153.txt  sample154.txt  sample155.txt  sample156.txt  sample157.txt  sample158.txt  sample159.txt  sample161.txt  sample164.txt  sample166.txt  sample167.txt  (+338 more)
model/: genGOL.cu  mercury.cu  mercury_python.cu
model_save/: mercury_custom_conv3-LReLU-He_fc5-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_184830  mercury_custom_conv3-LReLU-He_fc5-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_185854  mercury_custom_conv3-LReLU-He_fc5-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_191208  mercury_custom_conv3-LReLU-He_fc5-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_193828
result/: test_resultsmercury_custom_conv0-LReLU-He_fc0-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_184830-to_trained_by-database-54321_4000_0.300000.txt  test_resultsmercury_custom_conv0-LReLU-He_fc0-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_185854-to_trained_by-database-54321_8000_0.300000.txt  test_resultsmercury_custom_conv0-LReLU-He_fc0-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_191208-to_trained_by-database-54321_16000_0.300000.txt  test_resultsmercury_custom_conv0-LReLU-He_fc0-Tanh-Xavier_BCEWithLogits_Adam-1000-50-0.000001-2025-08-17_193828-to_trained_by-database-54321_32000_0.300000.txt  test_resultsmercury_custom_conv3-LReLU-He_fc5-Tanh-Xavier_BCEWithLogits_Adam-1000-64-0.000010-2025-08-17_173248-to_trained_by-database-54321_8000_0.300000.txt
src/: GOLdatabase_2.cu  GOLdatabase_2.hpp  (+4 more)
(+37 files in other folders)
